--- a/components/TrainingApplication/TrainingApplicationForm/СonsentSection/СonsentSection.module.scss
+++ b/components/TrainingApplication/TrainingApplicationForm/СonsentSection/СonsentSection.module.scss
@@ -7,6 +7,7 @@
   .buttonContainerInner {
     display: flex;
     gap: 8px;
+    flex-direction: column;
     .consentCheckboxItem {
       display: flex;
       align-items: center;
@@ -76,4 +77,9 @@
 
 @media (max-width: 739px) {
 
+}
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: 4px;
 }
