--- a/components/UI/CustomCoverflowSlider/CustomCoverflowSlider.module.scss
+++ b/components/UI/CustomCoverflowSlider/CustomCoverflowSlider.module.scss
@@ -22,13 +22,6 @@
             user-select: none;
             pointer-events: none;
         }
-
-        .slideImage {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 10px;
-        }
     }
 
     .newsCardSlider {
@@ -47,11 +40,6 @@
                 width: 320px;
                 height: 382px;
             }
-        }
-
-        .slideImage {
-            object-fit: cover;
-            border-radius: 10px;
         }
     }
 
@@ -99,6 +87,59 @@
         }
 
     }
+
+    .friendsOfSchoolSlideSlider {
+        height: 514px;
+
+        @media (max-width: 1024px) {
+            height: 326px;
+        }
+        @media (max-width: 739px) {
+            height: 223px;
+        }
+        .slide {
+            background: $neutral-white;
+            width: 656px;
+            height: 514px;
+            @media (max-width: 1024px) {
+                width: 416px;
+                height: 326px;
+            }
+            @media (max-width: 739px) {
+                width: 240px;
+                height: 223px;
+                margin: 0 8px;
+            }
+        }
+    }
+    .memberCardSlideSlider {
+        height: 706px;
+        @media (max-width: 739px) {
+            height: 336px;
+        }
+        .slide {
+            background: $neutral-white;
+            width: 432px;
+            height: 706px;
+            border-radius: 24px;
+            @media (max-width: 739px) {
+                width: 208px;
+                height: 336px;
+            }
+        }
+    }
+
+    .feedbackSlideSlider {
+        height: 419px;
+        .slide {
+            background: $neutral-white;
+            width: 656px;
+            height: 419px;
+            overflow: hidden;
+            border-radius: 24px;
+        }
+    }
+
     .sliderButton {
         position: absolute;
         top: 50%;
